[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/enemyMob/angery.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]

[node name="Enemy" type="KinematicBody2D" groups=["Enemy"]]
script = ExtResource( 2 )

[node name="Angery" type="Sprite" parent="."]
scale = Vector2( 0.075, 0.075 )
texture = ExtResource( 1 )

[node name="enemyColl" type="CollisionShape2D" parent="."]
visible = false
scale = Vector2( 1.30304, 1.35655 )
shape = SubResource( 1 )

[node name="hitbox" type="Area2D" parent="."]

[node name="hitboxColl" type="CollisionShape2D" parent="hitbox"]
scale = Vector2( 1.44874, 1.36685 )
shape = SubResource( 2 )

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2( 13, -13 )
enabled = true

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2( -13, -13 )
enabled = true

[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
